Edit header styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,5 +9,5 @@ body {
   justify-content: center;
   align-items: center;
   border-bottom: 1px solid black;
-  border-color: aliceblue;
+  border-top-color: aqua;
 }
