--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,11 @@ body {
   border-bottom: 1px solid black;
   border-top-color: aqua;
 }
+
+.footer {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid black;
+}
