--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
   font-size: 18px;
 }
 
-.header_new {
+.header {
   height: 50px;
   display: flex;
   justify-content: center;
@@ -18,4 +18,8 @@ body {
   justify-content: center;
   align-items: center;
   border-top: 1px solid black;
+}
+
+.content {
+  min-height: calc(100vh - 100px);
 }
