--- a/src/styles.css
+++ b/src/styles.css
@@ -22,5 +22,8 @@ body {
 
 .content {
   min-height: calc(100vh - 100px);
+  max-width: calc(100vw - 100px);
   border-bottom: 1px solid black;
+  width: 720px;
+  margin: auto;
 }
